--- a/Evaluation+/Base.lproj/Main.storyboard
+++ b/Evaluation+/Base.lproj/Main.storyboard
@@ -101,9 +101,6 @@
                                         <state key="normal" title="&lt;">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
-                                        <connections>
-                                            <segue destination="BYZ-38-t0r" kind="presentation" id="LOq-TD-Eis"/>
-                                        </connections>
                                     </button>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="40M-Mz-Cyb">
                                         <rect key="frame" x="8" y="8" width="359" height="386"/>
@@ -136,6 +133,10 @@
                                                 </tableViewCellContentView>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="ex6-bX-FWc" id="nT3-XK-G6f"/>
+                                            <outlet property="delegate" destination="ex6-bX-FWc" id="yCQ-79-EpW"/>
+                                        </connections>
                                     </tableView>
                                 </subviews>
                             </view>
@@ -151,7 +152,7 @@
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="addCourseAndgrade:" destination="ex6-bX-FWc" eventType="touchUpInside" id="rTq-ul-Q2r"/>
+                                            <action selector="addCourseAndgrade:" destination="ex6-bX-FWc" eventType="touchUpInside" id="VJ9-y1-D9x"/>
                                         </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Grade" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oQZ-uH-sC5">
@@ -161,7 +162,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <connections>
-                                            <outlet property="delegate" destination="ex6-bX-FWc" id="gWI-F5-BVs"/>
+                                            <outlet property="delegate" destination="ex6-bX-FWc" id="C8C-3e-mZe"/>
                                         </connections>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Course" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7f4-Si-Yb7">
@@ -171,7 +172,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <connections>
-                                            <outlet property="delegate" destination="ex6-bX-FWc" id="ba2-TS-su3"/>
+                                            <outlet property="delegate" destination="ex6-bX-FWc" id="ylc-XP-e4b"/>
                                         </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8gy-fl-ASO">
@@ -189,10 +190,10 @@
                         <viewLayoutGuide key="safeArea" id="8En-c6-8gd"/>
                     </view>
                     <connections>
-                        <outlet property="course_grade_tableveiw" destination="40M-Mz-Cyb" id="RGd-In-pM5"/>
-                        <outlet property="couseField" destination="7f4-Si-Yb7" id="ftS-BW-yMD"/>
-                        <outlet property="gradeField" destination="oQZ-uH-sC5" id="g0u-YG-iZg"/>
-                        <outlet property="student_name_label" destination="8gy-fl-ASO" id="jha-dD-kuD"/>
+                        <outlet property="course_grade_tableveiw" destination="40M-Mz-Cyb" id="c0B-Ye-Mhy"/>
+                        <outlet property="couseField" destination="7f4-Si-Yb7" id="AQt-Y6-JXz"/>
+                        <outlet property="gradeField" destination="oQZ-uH-sC5" id="Aa0-2N-cgh"/>
+                        <outlet property="student_name_label" destination="8gy-fl-ASO" id="swD-ds-NIJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cz9-vN-7SX" userLabel="First Responder" sceneMemberID="firstResponder"/>
